Adding ct model

--- a/kalmanFilter/motion_models/CMakeLists.txt
+++ b/kalmanFilter/motion_models/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.16)
 find_package(Eigen3 REQUIRED)
 
-add_executable(test_motion_model test_main.cpp ConstantVelocityModel.cpp)
+add_executable(test_motion_model test_main.cpp ConstantVelocityModel.cpp CoordinatedTurnModel.cpp)
 
 #target_include_directories(test_motion_model PUBLIC "${PROJECT_SOURCE_DIR"} ConstantVelocityModel.h"
 
