cmake changes and project re-org

--- a/dataSimulator/CMakeLists.txt
+++ b/dataSimulator/CMakeLists.txt
@@ -1,5 +1,29 @@
+cmake_minimum_required(VERSION 3.0)
+project(data_sim_exe)
+
 find_package(Eigen3 REQUIRED)
 
-add_executable(data_sim test_data_sim.cpp Mvn.cpp)
+add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/../stateEstimation se_build)
 
-target_link_libraries(data_sim PRIVATE Eigen3::Eigen)
+add_library(data_sim_lib 
+            ${CMAKE_CURRENT_LIST_DIR}/utilities/Mvn.cpp
+            ${CMAKE_CURRENT_LIST_DIR}/src/GenLinearStateSequences.cpp
+            )
+
+target_include_directories ( data_sim_lib PUBLIC 
+                             ${CMAKE_CURRENT_LIST_DIR}/src/
+                             ${CMAKE_CURRENT_LIST_DIR}/utilities/
+                             ${CMAKE_CURRENT_LIST_DIR}/../stateEstimation/motion_models/src/
+                             ${CMAKE_CURRENT_LIST_DIR}/../stateEstimation/measurement_models/src/
+                            )
+target_link_libraries(data_sim_lib se_lib)
+
+add_executable(data_sim_exe "${CMAKE_CURRENT_LIST_DIR}/src/test_data_sim.cpp")
+
+target_include_directories ( data_sim_exe PUBLIC 
+                             ${CMAKE_CURRENT_LIST_DIR}/src/
+                             ${CMAKE_CURRENT_LIST_DIR}/utilities/
+                            )
+
+target_link_libraries(data_sim_exe data_sim_lib)
+                                   
